<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <!-- 登录框 -->

    <RelativeLayout
        android:id="@+id/login_div"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/background_login_div_bg"
        android:padding="15dp" >

        <!-- 用户名 text -->

        <TextView
            android:id="@+id/login_user_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/login_label_username" />
        <!-- TODO: disable auto correct. -->
        <!-- 用户名 input -->

        <EditText
            android:id="@+id/loginNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_user_input"
            android:inputType="number"
            android:singleLine="true" />
        <!-- 密码 text -->

        <TextView
            android:id="@+id/login_password_input"
            style="@style/normalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginNumber"
            android:layout_marginTop="3dp"
            android:text="@string/login_label_password" />
        <!-- 密码 input -->

        <EditText
            android:id="@+id/loginKey"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_password_input"
            android:hint="@string/lib_key_hint"
            android:inputType="textPassword"
            android:singleLine="true" />
        <!-- 登陆 button -->

        <Button
            android:id="@+id/loginButton"
            style="@style/blue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/loginKey"
            android:layout_below="@id/loginKey"
            android:layout_marginTop="10dp"
            android:text="@string/login_label_signin" />
        <!-- 提示栏 -->

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/loginButton"
            android:layout_alignLeft="@id/loginKey"
            android:autoLink="web"
            android:clickable="true"
            android:gravity="bottom"
            android:textColor="#888"
            android:textSize="13dp" />

        <CheckBox
            android:id="@+id/recd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/progress_text"
            android:layout_alignLeft="@+id/loginKey"
            android:text="@string/recd" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/login_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/login_register_link"
            android:textColor="#888"
            android:textColorLink="@color/link_color"
            android:visibility="visible" />

        <TextView
            android:id="@+id/refresh_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_hint"
            android:layout_below="@+id/login_hint"
            android:layout_marginTop="24dp"
            android:textColor="@color/button_text"
            android:visibility="gone"
            android:text="测试版功能：\n请输入一个刷新时间。\n格式要求：正整数（建议1-15）" />

        <EditText
            android:id="@+id/refresh_time"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/refresh_hint"
            android:layout_marginLeft="22dp"
            android:layout_toRightOf="@id/refresh_hint"
            android:ems="10"
            android:inputType="number"
            android:text="2"
            android:visibility="gone" >

            <requestFocus />
        </EditText>

    </RelativeLayout>
    <!-- 迷你广告 -->

    <LinearLayout
        android:id="@+id/miniAdLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" />

</LinearLayout>