<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background" >

    <LinearLayout
        android:id="@+id/home_top_bg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:background="@drawable/head_blue_background"
            android:clickable="true"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/menuButton"
                android:layout_width="54dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:background="@drawable/head_title_wrapper_background"
                android:clickable="true"
                android:scaleType="centerInside"
                android:src="@drawable/head_flip" />

            <ImageView
                android:layout_width="2px"
                android:layout_height="24dip"
                android:layout_gravity="center"
                android:src="@drawable/head_separator" />

            <TextView
                android:id="@+id/menu_title"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginRight="54dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="8dip"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/appscenter_menu"
                android:layout_width="54dip"
                android:layout_height="fill_parent"
                android:background="@drawable/head_title_wrapper_background"
                android:clickable="true"
                android:scaleType="centerInside"
                android:src="@drawable/head_menu"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <Spinner
                android:id="@+id/spinner_search_type"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:entries="@array/spinner_search_type"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinner_match_flag"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginRight="30dp"
                android:entries="@array/spinner_match_flag"
                android:layout_weight="1" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp" >

            <EditText
                android:id="@+id/searchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="80dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/textfield_search_empty"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:singleLine="true" />

            <Button
                android:id="@+id/clearBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/searchButton"
                android:layout_marginRight="54dp"
                android:background="@drawable/search_button_clear"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="15dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="23dp"
                android:contentDescription="@string/search"
                android:src="@drawable/qr_selector" />

            <!-- <ImageButton
                android:id="@+id/ImageButton01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/searchButton"
                android:layout_centerVertical="true"
                android:layout_marginRight="33dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/search"
                android:src="@drawable/search" /> -->

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/mainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="28dp"
                android:text="TextView"
                android:textColor="@color/contents_text" />

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>